<resources>
    <string name="app_name">Rapid</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="passenger">Passenger</string>
    <string name="driver">Driver</string>

    <string name="enter_first_name">First name…</string>
    <string name="enter_last_name">Last name…</string>
    <string name="enter_phone_number">Phone number…</string>
    <string name="enter_email">Email…</string>
    <string name="empty_email">Email is required!</string>
    <string name="enter_password">Enter password…</string>
    <string name="empty_password">Password is required!</string>
    <string name="enter_password_again">Password again…</string>
    <string name="car_make">Car make…</string>
    <string name="car_model">Car model…</string>
    <string name="car_color">Car color…</string>

    <string name="facebook_app_id">627921385443797</string>
    <string name="fb_login_protocol_scheme">fb627921385443797</string>
    <string name="facebook_client_token">0f24d31d6109f7a2c4ebc8890ac17fa6</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_in_success">Signed in successfully!</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log out</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="account_is_not_present">Don`t have an account?</string>
    <string name="account_is_present">Already have an account?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_password">Reset password?</string>
    <string name="enter_email_to_get_reset_mail_link">Enter your email to get reset email link:</string>
    <string name="password_reset_link_sent">Password reset link sent to your email</string>
    <string name="password_reset_link_not_sent">Password reset link was not sent!</string>
    <string name="user_profile">User profile</string>
    <string name="settings">Settings</string>
    <string name="users">users</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="edit_user_profile">Edit profile</string>
    <string name="change_photo">Change photo</string>
    <string name="update_profile">Update profile</string>


    <string name="your_location">Your location</string>
    <string name="destination_location">Destination location</string>
    <string name="order_a_taxi">Order a taxi</string>
    <string name="looking_for_a_driver">Looking for a driver...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>