<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.DriverRegistrationActivity">


    <ImageView
        android:id="@+id/rapidImage"
        android:layout_width="180dp"
        android:layout_height="119dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/enterFirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/rapid_logo" />

    <EditText
        android:id="@+id/enterFirstName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/enter_first_name"
        android:inputType="textPersonName"
        android:paddingHorizontal="36dp"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rapidImage" />

    <EditText
        android:id="@+id/enterLastName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/enter_last_name"
        android:inputType="textPersonName"
        android:paddingHorizontal="36dp"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/enterFirstName"
        app:layout_constraintTop_toBottomOf="@+id/enterFirstName" />

    <EditText
        android:id="@+id/enterPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/enter_phone_number"
        android:inputType="phone"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="@+id/enterFirstName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/enterFirstName"
        app:layout_constraintTop_toBottomOf="@+id/enterLastName" />

    <EditText
        android:id="@+id/enterEmailAddress"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="@+id/enterFirstName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/enterFirstName"
        app:layout_constraintTop_toBottomOf="@+id/enterPhoneNumber" />

    <EditText
        android:id="@+id/enterPassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="@+id/enterFirstName"
        app:layout_constraintStart_toStartOf="@+id/enterFirstName"
        app:layout_constraintTop_toBottomOf="@+id/enterEmailAddress" />

    <EditText
        android:id="@+id/enterPasswordAgain"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/enter_password_again"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="@+id/enterFirstName"
        app:layout_constraintStart_toStartOf="@+id/enterFirstName"
        app:layout_constraintTop_toBottomOf="@+id/enterPassword" />

    <EditText
        android:id="@+id/enterCarMake"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/car_make"
        android:inputType="text"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="@+id/enterFirstName"
        app:layout_constraintStart_toStartOf="@+id/enterFirstName"
        app:layout_constraintTop_toBottomOf="@+id/enterPasswordAgain" />

    <EditText
        android:id="@+id/enterCarModel"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/car_model"
        android:inputType="text"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="@+id/enterFirstName"
        app:layout_constraintStart_toStartOf="@+id/enterFirstName"
        app:layout_constraintTop_toBottomOf="@+id/enterCarMake" />

    <EditText
        android:id="@+id/enterCarColor"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/car_color"
        android:inputType="text"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="@+id/enterFirstName"
        app:layout_constraintStart_toStartOf="@+id/enterFirstName"
        app:layout_constraintTop_toBottomOf="@+id/enterCarModel" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/black"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/enterFirstName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/enterFirstName"
        app:layout_constraintTop_toBottomOf="@+id/enterCarColor" />

    <TextView
        android:id="@+id/noneAccountTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/account_is_present"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/logInButton"
        app:layout_constraintStart_toStartOf="@+id/enterFirstName"
        app:layout_constraintTop_toTopOf="@+id/logInButton" />

    <Button
        android:id="@+id/logInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/enterFirstName"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>