<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.userprofile.EditDriverActivity">


    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="phone"
        android:paddingStart="16dp"
        android:background="@drawable/rounded_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/etFirstName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etFirstName"
        app:layout_constraintTop_toBottomOf="@+id/etLastName" />

    <ImageView
        android:id="@+id/ivAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:src="@drawable/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:inputType="text"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEditAvatar" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:inputType="text"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="@+id/etFirstName"
        app:layout_constraintStart_toStartOf="@+id/etFirstName"
        app:layout_constraintTop_toBottomOf="@+id/etFirstName" />

    <Button
        android:id="@+id/btnEditAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/change_photo"
        app:layout_constraintEnd_toEndOf="@+id/ivAvatar"
        app:layout_constraintStart_toStartOf="@+id/ivAvatar"
        app:layout_constraintTop_toBottomOf="@+id/ivAvatar" />

    <Button
        android:id="@+id/btnUpdateProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/update_profile"
        app:layout_constraintEnd_toEndOf="@+id/etLastName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etLastName"
        app:layout_constraintTop_toBottomOf="@+id/enterCarColor" />

    <EditText
        android:id="@+id/enterCarMake"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/car_make"
        android:inputType="text"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="@+id/etPhoneNumber"
        app:layout_constraintStart_toStartOf="@+id/etPhoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/etPhoneNumber" />

    <EditText
        android:id="@+id/enterCarModel"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/car_model"
        android:inputType="text"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="@+id/enterCarMake"
        app:layout_constraintStart_toStartOf="@+id/enterCarMake"
        app:layout_constraintTop_toBottomOf="@+id/enterCarMake" />

    <EditText
        android:id="@+id/enterCarColor"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/car_color"
        android:inputType="text"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="@+id/enterCarModel"
        app:layout_constraintStart_toStartOf="@+id/enterCarModel"
        app:layout_constraintTop_toBottomOf="@+id/enterCarModel" />


</androidx.constraintlayout.widget.ConstraintLayout>